--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
     <header>
         <h2>ВУКР - Всеукраїнська коллекція етнічних речей</h2>
-        <ul>
+        <ul class="navigation">
             <li><a href="index.html">Головна</a></li>
             <li><a href="#about">Про коллекцію</a></li>
             <li><a href="weapon.html">Зброя</a></li>
             <li><a href="#dictionary">Словник</a></li>
             <li><a href="towel.html">Рушники</a></li>
         </ul>
+        <div class="navigationBtn"></div>
     </header>
 
     <section class="home">
