--- a/towel.html
+++ b/towel.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="towel.css">
     <title>Museum</title>
 </head>
 <body>
-    <header class="scroll fix">
+    <header>
         <h2>ВУКР - Всеукраїнська коллекція етнічних речей</h2>
-        <ul>
+        <ul class="navigation">
             <li><a href="index.html">Головна</a></li>
-            <li><a href="index.html#about">Про коллекцію</a></li>
-            <li><a href="#">Фольклор</a></li>
+            <li><a href="#about">Про коллекцію</a></li>
             <li><a href="weapon.html">Зброя</a></li>
-            <li><a href="index.html#dictionary">Словник</a></li>
+            <li><a href="#dictionary">Словник</a></li>
             <li><a href="towel.html">Рушники</a></li>
         </ul>
+        <div class="navigationBtn"></div>
     </header>
 
     <section class="towel">
@@ -183,4 +183,5 @@
         </div>
     </section>
 </body>
+<script src="index.js"></script>
 </html>
